copy edits from MJ

--- a/app/assets/stylesheets/modules/_landing_pages.scss
+++ b/app/assets/stylesheets/modules/_landing_pages.scss
@@ -72,12 +72,14 @@ body.hero-bg .wrapper--full-bleed__bg-03{
   text-align: left;
   background-position: top left;
   padding-left: 108px;
+  padding-right: 200px;
 }
 
 .new-quiz__about-step.right {
   text-align: right;
   background-position: top right;
   padding-right: 108px;
+  padding-left: 200px;
 }
 
 .new-quiz__about-step.step-1 {
