--- a/app/views/giftee_invitations/create.haml
+++ b/app/views/giftee_invitations/create.haml
@@ -1,15 +1,13 @@
 %h1 Thank You!
 
 %p.lead.tan-002
-  Thank you for participating in the Wrapt
-  %sup.trademark
-    &#8482;
-  Beta and inviting #{@profile.name} to Wrapt.  Your participation &amp; feedback will directly impact the success of our product.
+  Thank you for being part of our Better Gifting secret and for inviting others. To show you our gratitude, we would like to send you a small token of our appreciation.
+%p.mb3
+  Your participation &amp; feedback will directly impact the success of Wrapt and help to support our our mission to increase connectedness and love between people by helping them to give better, more meaningful gifts.
 
 %p.lead.tan-002
-  Sincerely,
+  With gratitude,
   %br
-  The Wrapt
+  Team Wrapt
   %sup.trademark
     &#8482;
-  Team
