--- a/app/views/giftee_invitations_mailer/review_gift_selections_invitation.html.haml
+++ b/app/views/giftee_invitations_mailer/review_gift_selections_invitation.html.haml
@@ -9,24 +9,15 @@
         -# %p= "Dear #{@profile.name},"
 
         %p{style: "text-align: center; font-size: 16px; color: #C5AA80; font-weight: bold; line-height: 1.75;"}
-          #{@profile.owner.first_name || 'Someone'} has been shopping for gifts for you on Wrapt
-          =succeed ', ' do
-            %sup
-              &#8482;
-          %br
-          a new gift-giving site dedicated to better gifting with artisanal items, memorable experiences and funds for your wish-lists in life.
+          #{@profile.owner.first_name || 'Someone'} has been gift shopping for for you on Wrapt, the new better gifting platform dedicated matching who you are, with gifts you will love - from artisanal items, memorable experiences or funds for your wish-lists in life.
 
         %p{style: "text-align: center; font-size: 16px; color: #444; font-weight: normal; line-height: 1.75;"}
-          #{@profile.owner.first_name || 'They'}, together with curators from Wrapt
-          =succeed ', ' do
-            %sup
-              &#8482;
-          chose gifts for you based on answers they gave to a short quiz regarding your personality, passions and purpose.
+          #{@profile.owner.first_name || 'They'}, , together with the curators from Wrapt, chose gifts for you based on answers she gave about your personality, passions and purpose in life. 
 
         %p{style: "text-align: center; font-size: 16px; color: #444; font-weight: normal; line-height: 1.75;"}
-          They (as well as we!) would love to know what you think about these gifts they chose. 
+          Now, we would love to see how well we did in choosing for you. 
           %br
-          Would you review and mark as liked/not liked for the reasons in the pull down menu? 
+          Would you kindly review the gifts we chose and mark as liked/not liked for the reasons in the pull-down menu?
         %p{style: "text-align: center; font-size: 16px; color: #444; font-weight: normal; line-height: 1.75;"}
           Given that this is our testing period before our actual launch, your feedback is super-helpful and appreciated.
         
