--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -2,9 +2,14 @@
   .row
     .col-xs-10.col-xs-offset-1
       .hero-overlay
-        %h2.light Launching Soon!
+        %h2.light (Pssst!  It’s almost here.) 
         %p.light
-          This site is currently in a closed beta.
+          Enter your email address below to join our inner circle of Wrapt family and friends.
+          As soon as we’re ready, we’ll send you an invite to try Wrapt.
+          %br
+          With thanks,
+          %br
+          Team Wrapt.
       
       .hero-overrun
         - if current_user&.admin?
