--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -3,10 +3,10 @@
     .col-xs-10.col-xs-offset-1
       .hero-overlay
         %h2.light
-          She’s one-of-a-kind…
+          She’s one-of-a-kind&hellip;
           %br
           now her gifts can be as well
-        %p.light We use the science of gifting and gratitude to match her personality, passions and purpose, to gifts she will love, all year long.
+        %p.light We use the science of gifting and gratitude to match her personality, passions and purpose, to gifts she will love, no matter the occasion.
 
       .hero-overrun
         .sqr-progress
@@ -27,15 +27,15 @@
               Wrapt 
               %sup.trademark
                 &#8482;
-              is a fun and easy way to discover the perfect gifts she will love, based on who she actually is, all year long.
+              is a fun and easy way to discover the perfect gifts she will love, based on who she actually is.
 
         .new-quiz__about-step.step-1.left
           %h4.light Tell Us About Her
-          %p Answer a few questions about her personality, passions, and purpose.
+          %p Help us understand what makers her ‘tick’ by answering a few questions about her personality, passions, and purpose.
 
         .new-quiz__about-step.step-2.right
-          %h4.light We Suggests the Gifts She’ll Love
-          %p Based on your answers, we then match her with gifts from our curated collection.
+          %h4.light We Suggests Gifts She’ll Love
+          %p Based on your answers, we then match her with gifts from our curated collection of artisanal items, memorable experiences, or practical funds.
 
         .new-quiz__about-step.step-3.left
           %h4.light 
@@ -43,7 +43,7 @@
             %sup.trademark
               &#8482;
             &amp; Delivered
-          %p She receives a gift she loves, wrapt and delivered, and you will gain a 'gift whisperer' with all of her occasions.
+          %p She receives a gift she loves, wrapt and delivered, and you will gain a personal  'gift whisperer' that can help you surprise her with meaningful gifts for every occasion.
 
 - content_for :after_wrapper do
   .new-quiz__after-wrapper.bg-blue-004
@@ -53,7 +53,7 @@
           .new-quiz__about-intro-wrapper
             .new-quiz__about-intro-content.border-dark
               %h2 Our Own Collection
-              %p Our collection includes Artisanal items, Experiences you can do together, and Funds that will fulfill a bucket list dream of hers that you can fund with family and friends.
+              %p Our collection includes Artisanal items, Experiences you can do together, and Funds that fulfill a practical wish or a bucket list dream from the whole gang.
           .new-quiz__gift-examples
             .new-quiz__gift-example
               .new-quiz__gift-example-image
@@ -61,8 +61,8 @@
               .new-quiz__gift-example-badge
                 = svg 'single-heart'
               .new-quiz__gift-example-text
-                %h4.letter-spacing-01 Artisan Items
-                %p ethically sourced, curated by wrapt and made in the US or from global artisan enterprises
+                %h4.letter-spacing-01 Artisanal Items
+                %p  ethically-sourced and made in the US or from global artisan enterprises.
             .new-quiz__gift-example
               .new-quiz__gift-example-image
                 = image_tag 'gift-example__experience.jpg'
@@ -70,7 +70,7 @@
                 = svg 'hearts-two'
               .new-quiz__gift-example-text
                 %h4.letter-spacing-01 Experience it Together
-                %p for you both to share - we’ll help you pull it off!
+                %p for you to share and create memories - we’ll even help you pull it off!
             .new-quiz__gift-example
               .new-quiz__gift-example-image
                 = image_tag 'gift-example__fund.jpg'
@@ -78,5 +78,5 @@
                 = svg 'hearts-three'
               .new-quiz__gift-example-text
                 %h4.letter-spacing-01 Fund it with Others
-                %p from family and friends, that will make her bucket list items come true
+                %p Along with family and friends, fund a practical wish or a bucket list dream of hers!
           .clearfix
