--- a/app/views/recipient_gift_selections/_gift_basket.haml
+++ b/app/views/recipient_gift_selections/_gift_basket.haml
@@ -12,10 +12,9 @@
         Thank You!
         %span.pull-right &#8212;
       %p.help.gift-basket__footer__text 
-        In our beta testing phase we are not fulfilling gift selections but we will be soon. Share our site with friend & family&#8212;the more users we have on Wrapt
-        %sup.trademark
-          &#8482;
-        the better the gifting gets.
+        In our testing phase we are not fulfilling gift selections but we will be soon.
+        %br
+        To help us refine our ‘gift whispering’ skills, please share our site with friends &amp; family  you think would enjoy giving us feedback: the more we get, the better our gifting improves.
       
 
       = link_to 'SHARE WRAPT NOW', new_profile_recipient_originated_referral_path(profile.recipient_access_token), class: 'btn btn-primary btn-full-width btn-gift-basket-submit', data: {loads_in_pjax_modal: true, behavior: 'gift-basket-submit'}
