--- a/app/views/recipient_originated_referrals/create.haml
+++ b/app/views/recipient_originated_referrals/create.haml
@@ -1,15 +1,14 @@
 %h1 Thank You!
 
 %p.lead.tan-002
-  Thank you for participating in the Wrapt
+  Thank you for participating in this Wrapt
   %sup.trademark
     &#8482;
-  Beta. Your participation &amp; feedback will directly impact the success of our product.
+  trial. Your participation and feedback will help to refine our better gifting promise, our collection and offerings for launch. 
 
 %p.lead.tan-002
-  Sincerely,
+  With gratitude,
   %br
-  The Wrapt
+  Team Wrapt
   %sup.trademark
     &#8482;
-  Team
