--- a/app/views/user_activations_mailer/activation_needed_email.html.haml
+++ b/app/views/user_activations_mailer/activation_needed_email.html.haml
@@ -11,7 +11,7 @@
           Wrapt
           %sup
             &#8482;
-          is a new gift-giving site dedicated to better gifting with artisanal items, memorable experiences and funds for wish lists in life.
+          is the new better gifting platform designed to match who she is, to gifts she will love from a collection of artisanal items, memorable experiences and wishlist funds.
 
         %h3{style: "text-align: left; font-size: 18px; color: #444; font-weight: normal; line-height: 1.1;"}
           How it Works
@@ -19,11 +19,9 @@
         %ul{style: "text-align: left; font-size: 14px; color: #444; font-weight: normal; line-height: 1.75;"}
           %li You answer a few questions about her personality, passions, and purpose.
           %li Based on your answers, we then match her with gifts from our curated collection.
-          %li She receives a gift she loves, wrapt and delivered, and you will gain a 'gift whisperer' with all of her occasions.
+          %li She receives a gift she loves, wrapt and delivered, and you will gain a 'gift whisperer' that knows her who she is and can recommend gifts that she’ll love for future occasions.
 
         %p{style: "text-align: center; font-size: 16px; color: #C5AA80; font-weight: bold; line-height: 1.75;"}
-          For now, we're just testing and not sending actual gifts.
-          %br
-          We'd love your help!
+          For now, we're just testing and not sending actual gifts, but your input is invaluable!
 
         = link_to "Try WRAPT Now", @activation_url, style: "display: block; background-color: #ABBAD5; color: #333; text-transform: uppercase; font-size: 12px; letter-spacing: 1.4px; padding: 16px; text-align: center; text-decoration: none; line-height: 1;"
