--- a/app/views/giftee_invitations_mailer/review_gift_selections_invitation.text.haml
+++ b/app/views/giftee_invitations_mailer/review_gift_selections_invitation.text.haml
@@ -1,11 +1,12 @@
 = "Dear #{@profile.name},"
 
-#{@profile.owner.first_name || 'Someone'} has been shopping for gifts for you on Wrapt, a new gift-giving site dedicated to better gifting with artisanal items, memorable experiences and funds for your wish-lists in life.
+#{@profile.owner.first_name || 'Someone'} has been gift shopping for for you on Wrapt,the new better gifting platform dedicated matching who you are, with gifts you will love - from artisanal items, memorable experiences or funds for your wish-lists in life.
 
-#{@profile.owner.first_name || 'He'}, together with curators from Wrapt, chose gifts for you based on answers they gave to a short quiz regarding your personality, passions and purpose.
+#{@profile.owner.first_name || 'They'}, together with the curators from Wrapt, chose gifts for you based on answers she gave about your personality, passions and purpose in life. 
 
-They (as well as we!) would love to know what you think about these gifts he chose. 
-Would you review and mark as liked/not liked for the reasons in the pull down menu? 
+Now, we would love to see how well we did in choosing for you. 
+
+Would you kindly review the gifts we chose and mark as liked/not liked for the reasons in the pull-down menu?
 
 Given that this is our testing period before our actual launch, your feedback is super-helpful and appreciated.
 
