--- a/app/views/survey_response_completions/show.haml
+++ b/app/views/survey_response_completions/show.haml
@@ -2,14 +2,14 @@
   .row
     .col-xs-12
       .pa3.text-center
-        %h1 Great Job! We’ve got all the information we need to make gift recommendations for #{@survey_response.giftee_name}
-        %p.tan-002 A few more things to get squared away before we reveal the gifts
+        %h1 Great Job! Now we have all the information we need to make gift recommendations for #{@survey_response.giftee_name}.
+        %p.tan-002 But before we share her matched gifts, here’s a special request
 
 
       = simple_form_for @survey_response_completion, url: with_invitation_scope(profile_survey_completion_path(@profile, @survey_response)) do |form|
         .floating-container.floating-container__invite
           %h4 Invite #{@survey_response.giftee_name}!
-          %p In our Beta Stage we are testing several aspects of our offering. One key piece is presenting you with the most accurate recommendations possible. In order to do that, we’d like to ask her to review the gift recommendations and rate some of the items in our catalog.
+          %p During this stage of our testing we would like to circle back with her and see how well we did. We will ask her to review gift recommendations by Wrapt, your choices and rate some of the items in our collection. 
           .row
             .col-xs-6
               = form.input :profile_email, label: 'Her Email Address'
