--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -4,7 +4,8 @@
     %title Wrapt
     %meta{name: "viewport", content: "width=device-width"}
     %meta{content: "IE=edge", "http-equiv": "X-UA-Compatible"}
-    = render 'layouts/google_analytics'
+    - if Rails.env.production?
+      = render 'layouts/google_analytics'
     = csrf_meta_tags
     = action_cable_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
