--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,6 +11,8 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = render 'layouts/favicons'
+    - if Rails.env.production? && !admin_login_required?
+      = render 'layouts/loop11_script'
   %body{class: body_classes}
     -# svg include needs to be first thing in body tag
     = svg 'symbol-defs'
