--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,6 +11,7 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = render 'layouts/favicons'
+    = render 'layouts/social_tags'
     - if Rails.env.production? && !admin_login_required?
       = render 'layouts/loop11_script'
   %body{class: body_classes}
