adjustments for responsive on email catcher home page only [#142690603]

--- a/app/assets/stylesheets/modules/_forms.scss
+++ b/app/assets/stylesheets/modules/_forms.scss
@@ -273,3 +273,10 @@ label {
 .input-wrapper--show-hide {
   color: $gray-008;
 }
+
+// home page adjustment for responsive
+.home .sqr-form label {
+  @media (max-width: 768px) {
+    margin-bottom: 20px;
+  }
+}
