--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -1,6 +1,6 @@
 .container
   .row
-    .col-xs-10.col-xs-offset-1
+    .col-xs-12.col-sm-10.col-sm-offset-1
       .hero-overlay
         %h2.light (Pssst!  It’s almost here.) 
         %p.light
