--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,7 +2,11 @@
 %html
   %head
     %title Wrapt
-    %meta{name: "viewport", content: "width=device-width"}
+    -# TODO Hacky home page test so that email collector doesn't look horrible on mobile
+    - if root_path
+      %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
+    - else
+      %meta{name: "viewport", content: "width=device-width"}
     %meta{content: "IE=edge", "http-equiv": "X-UA-Compatible"}
     - if Rails.env.production?
       = render 'layouts/google_analytics'
