--- a/app/views/layouts/admin/_top_nav.haml
+++ b/app/views/layouts/admin/_top_nav.haml
@@ -12,10 +12,11 @@
         %li{class: ("active" if active_top_nav_section == 'product_categories')}= link_to "Product Categories", admin_product_categories_path
         %li{class: ("active" if active_top_nav_section == 'surveys')}= link_to "Quizzes", admin_surveys_path
         %li.divider-vertical
-        %li{class: ("active" if active_top_nav_section == 'profile_traits')}= link_to "Profile Traits", admin_profile_traits_topics_path
+        -# %li{class: ("active" if active_top_nav_section == 'profile_traits')}= link_to "Profile Traits", admin_profile_traits_topics_path
         %li{class: ("active" if active_top_nav_section == 'profile_sets')}= link_to "Response Sets", admin_profile_sets_path
         %li{class: ("active" if active_top_nav_section == 'training_sets')}= link_to "Gift Training Sets", admin_training_sets_path
-        %li{class: ("active" if active_top_nav_section == 'trait_training_sets')}= link_to "Profile Trait Training Sets", admin_trait_training_sets_path
+        -# %li{class: ("active" if active_top_nav_section == 'trait_training_sets')}= link_to "Profile Trait Training Sets", admin_trait_training_sets_path
+        %li{class: ("active" if active_top_nav_section == 'reports')}= link_to "Reports", admin_reports_path
         %li.divider-vertical
         %li{class: ("active" if active_top_nav_section == 'users')}= link_to "Manage Users", admin_users_path
         
