replace profile new example gifts images

--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -65,7 +65,7 @@
                 %p  ethically-sourced and made in the US or from global artisan enterprises.
             .new-quiz__gift-example
               .new-quiz__gift-example-image
-                = image_tag 'gift-example__experience.jpg'
+                = image_tag 'gift-example__experience.png'
               .new-quiz__gift-example-badge
                 = svg 'hearts-two'
               .new-quiz__gift-example-text
@@ -73,7 +73,7 @@
                 %p for you to share and create memories - we’ll even help you pull it off!
             .new-quiz__gift-example
               .new-quiz__gift-example-image
-                = image_tag 'gift-example__fund.jpg'
+                = image_tag 'gift-example__fund.png'
               .new-quiz__gift-example-badge
                 = svg 'hearts-three'
               .new-quiz__gift-example-text
