--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -2,14 +2,10 @@
   .row
     .col-xs-12.col-sm-10.col-sm-offset-1
       .hero-overlay
-        %h2.light (Pssst!  It’s almost here.) 
-        %p.light
-          Enter your email address below to join our inner circle of Wrapt family and friends.
-          As soon as we’re ready, we’ll send you an invite to try Wrapt.
-          %br
-          With thanks,
-          %br
-          Team Wrapt.
+        %h2.light
+          Introducting Wrapt,
+          a personalized gift whisperer to help you find gifts for the women in your life.
+        %p.light We use the science of gifting and gratitude to match her personality, passions and purpose, to gifts she will love, no matter the occasion.
       
       .hero-overrun
         - if current_user&.admin?
@@ -26,6 +22,10 @@
             .form-actions.pull-right
               = form.submit 'Submit', class: 'btn btn-primary'
             .clearfix
+      =render 'home/how_wrapt_works'
+
+- content_for :after_wrapper do
+  =render 'home/our_own_collection'
 
 
 
