--- a/app/assets/stylesheets/modules/_landing_pages.scss
+++ b/app/assets/stylesheets/modules/_landing_pages.scss
@@ -122,6 +122,7 @@ body.hero-bg .wrapper--full-bleed__bg-03{
   @media (max-width: $screen-xs-max) {
     flex-direction: column;
     max-width: 90%;
+    justify-content: flex-start;
   }
   overflow: hidden;
 }
