email copy edits

--- a/app/views/user_activations_mailer/activation_needed_email.html.haml
+++ b/app/views/user_activations_mailer/activation_needed_email.html.haml
@@ -4,24 +4,25 @@
       %td{style: "padding: 40px;"}
         %h1{style: "font-size: 32px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; text-align: center;"}
           You're invited to try WRAPT
-          %sup.trademark
-            &#8482;
 
         %p{style: "text-align: center; font-size: 16px; color: #C5AA80; font-weight: bold; line-height: 1.75;"}
-          Wrapt
-          %sup
-            &#8482;
-          is the new better gifting platform designed to match who she is, to gifts she will love from a collection of artisanal items, memorable experiences and wishlist funds.
+          Thank you for signing up to try Wrapt, a way to 
+          %em
+            gift better.
 
-        %h3{style: "text-align: left; font-size: 18px; color: #444; font-weight: normal; line-height: 1.1;"}
-          How it Works
+        %p{style: "text-align: left; font-size: 14px; color: #444; font-weight: normal; line-height: 1.75;"}
+          Simply answer the questions about a woman in your life –  a girlfriend, sister, wife, daughter, mother, colleague, boss – and we will do the rest.
+        %p{style: "text-align: left; font-size: 14px; color: #444; font-weight: normal; line-height: 1.75;"}
+          Then, you review her gift recommendations and tell us what you think. (Don’t get too hung up on the ‘right’ answers about her – you know her better than you think you do.)
 
-        %ul{style: "text-align: left; font-size: 14px; color: #444; font-weight: normal; line-height: 1.75;"}
-          %li You answer a few questions about her personality, passions, and purpose.
-          %li Based on your answers, we then match her with gifts from our curated collection.
-          %li She receives a gift she loves, wrapt and delivered, and you will gain a 'gift whisperer' that knows her who she is and can recommend gifts that she’ll love for future occasions.
+        %p{style: "text-align: left; font-size: 14px; color: #444; font-weight: normal; line-height: 1.75;"}
+          Here’s where it gets fun.
+        %p{style: "text-align: left; font-size: 14px; color: #444; font-weight: normal; line-height: 1.75;"}
+          At the very end, we will ask you for her email so that she can review the gifts that were chosen for her based on your answers (this part is only for this test). We want to know if she agrees.
 
         %p{style: "text-align: center; font-size: 16px; color: #C5AA80; font-weight: bold; line-height: 1.75;"}
           For now, we're just testing and not sending actual gifts, but your input is invaluable!
+        %p{style: "text-align: left; font-size: 14px; color: #444; font-weight: normal; line-height: 1.75;"}
+          So thanks for helping us out, having a little fun, and being part of something meaningful. (and even learning something about her).
 
         = link_to "Try WRAPT Now", @activation_url, style: "display: block; background-color: #ABBAD5; color: #333; text-transform: uppercase; font-size: 12px; letter-spacing: 1.4px; padding: 16px; text-align: center; text-decoration: none; line-height: 1;"
