--- a/app/views/user_activations_mailer/activation_needed_email.text.haml
+++ b/app/views/user_activations_mailer/activation_needed_email.text.haml
@@ -1,15 +1,22 @@
 You're invited to try WRAPT
 =====
 
-Wrapt is is the new better gifting platform designed to match who she is, to gifts she will love from a collection of artisanal items, memorable experiences and wishlist funds.
+Thank you for signing up to try Wrapt, a way to gift better.
+
+Simply answer the questions about a woman in your life –  a girlfriend, sister, wife, daughter, mother, colleague, boss – and we will do the rest.
+
+Then, you review her gift recommendations and tell us what you think. (Don’t get too hung up on the ‘right’ answers about her – you know her better than you think you do.)
+
 _________________
-How it Works:
-* You answer a few questions about her personality, passions, and purpose.
-* Based on your answers, we then match her with gifts from our curated collection.
-* She receives a gift she loves, wrapt and delivered, and you will gain a 'gift whisperer' that knows her who she is and can recommend gifts that she’ll love for future occasions.
+Here's where it gets fun.
+
+At the very end, we will ask you for her email so that she can review the gifts that were chosen for her based on your answers (this part is only for this test). We want to know if she agrees.
 
 _________________
 For now, we're just testing and not sending actual gifts, but your input is invaluable!
+
+So thanks for helping us out, having a little fun, and being part of something meaningful. (and even learning something about her).
+
 Try Wrapt now:
 
 = @activation_url
