--- a/app/views/user_activations_mailer/activation_needed_unmoderated_testing_platform.html.haml
+++ b/app/views/user_activations_mailer/activation_needed_unmoderated_testing_platform.html.haml
@@ -4,24 +4,32 @@
       %td{style: "padding: 40px;"}
         %h1{style: "font-size: 32px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; text-align: center;"}
           You're invited to try WRAPT
-          %sup.trademark
-            &#8482;
 
+        %p{style: "text-align: left; font-size: 14px; color: #444; font-weight: normal; line-height: 1.75;"}
+          Dear Friends,
         %p{style: "text-align: center; font-size: 16px; color: #C5AA80; font-weight: bold; line-height: 1.75;"}
-          Wrapt
-          %sup
-            &#8482;
-          is the new better gifting platform designed to match who she is, to gifts she will love from a collection of artisanal items, memorable experiences and wishlist funds.
-
-        %h3{style: "text-align: left; font-size: 18px; color: #444; font-weight: normal; line-height: 1.1;"}
-          How it Works
-
+          You have been invited as part of a small inner circle of friends and family, to preview our new platform for
+          %em
+            better gifting, 
+          Wrapt.
+        %p{style: "text-align: left; font-size: 14px; color: #444; font-weight: normal; line-height: 1.75;"}
+          At Wrapt, we use the science of gifting and gratitude to help you get better gifts for the women (wives, daughters, friends, moms) in your life. 
+        %p{style: "text-align: left; font-size: 14px; color: #444; font-weight: normal; line-height: 1.75;"}
+          What makes our gifts better? For one, we created a tool that uses technology to match who she is (personality, passions and purpose), to gifts in our collection. But then, we dug into what women want – turns out they want experiences so they feel closer, they prefer handmade and artisanal gifts, and they like practical things – contributions to causes they care about, or a group-funded idea like a bucket list trip, a home project or something they will use – dinner out, a spa trip - you get the idea. And now, Wrapt is (almost) here to help you make it happen.
+        %p{style: "text-align: left; font-size: 14px; color: #444; font-weight: normal; line-height: 1.75;"}
+          We chose you to help us test it out, because you’re that kind of guy (or gal).
+        %p{style: "text-align: left; font-size: 14px; color: #444; font-weight: normal; line-height: 1.75;"}
+          All you have to do is:
         %ul{style: "text-align: left; font-size: 14px; color: #444; font-weight: normal; line-height: 1.75;"}
-          %li You answer a few questions about her personality, passions, and purpose.
-          %li Based on your answers, we then match her with gifts from our curated collection.
-          %li She receives a gift she loves, wrapt and delivered, and you will gain a 'gift whisperer' that knows her who she is and can recommend gifts that she’ll love for future occasions.
-
+          %li Imagine a woman you need a gift for, 
+          %li Answer a few questions about her,
+          %li View the gifts we curated for her, and
+          %li Let us know what you think.
+        
         %p{style: "text-align: center; font-size: 16px; color: #C5AA80; font-weight: bold; line-height: 1.75;"}
-          For now, we're just testing and not sending actual gifts, but your input is invaluable!
-
-        = link_to "Try WRAPT Now", @activation_url, style: "display: block; background-color: #ABBAD5; color: #333; text-transform: uppercase; font-size: 12px; letter-spacing: 1.4px; padding: 16px; text-align: center; text-decoration: none; line-height: 1;"
+          There’s no buying at this stage, we just want you to test-drive our site, let us know how it worked for you and share it with her so she can weigh in. Simple. 
+        %p{style: "text-align: center; font-size: 16px; color: #C5AA80; font-weight: bold; line-height: 1.75;"}
+          At the end, you'll have a chance to invite her to check out the recommendations Wrapt made for her. We hope you will!
+        %p{style: "text-align: left; font-size: 14px; color: #444; font-weight: normal; line-height: 1.75;"}
+          We thank you in advance, (and so will she).
+        = link_to "Click here to get started", @activation_url, style: "display: block; background-color: #ABBAD5; color: #333; text-transform: uppercase; font-size: 12px; letter-spacing: 1.4px; padding: 16px; text-align: center; text-decoration: none; line-height: 1;"
