remove extraneous comma in email text

--- a/app/views/giftee_invitations_mailer/review_gift_selections_invitation.html.haml
+++ b/app/views/giftee_invitations_mailer/review_gift_selections_invitation.html.haml
@@ -12,7 +12,7 @@
           #{@profile.owner.first_name || 'Someone'} has been gift shopping for for you on Wrapt, the new better gifting platform dedicated matching who you are, with gifts you will love - from artisanal items, memorable experiences or funds for your wish-lists in life.
 
         %p{style: "text-align: center; font-size: 16px; color: #444; font-weight: normal; line-height: 1.75;"}
-          #{@profile.owner.first_name || 'They'}, , together with the curators from Wrapt, chose gifts for you based on answers she gave about your personality, passions and purpose in life. 
+          #{@profile.owner.first_name || 'They'}, together with the curators from Wrapt, chose gifts for you based on answers she gave about your personality, passions and purpose in life. 
 
         %p{style: "text-align: center; font-size: 16px; color: #444; font-weight: normal; line-height: 1.75;"}
           Now, we would love to see how well we did in choosing for you. 
