--- a/app/views/home/_how_wrapt_works.haml
+++ b/app/views/home/_how_wrapt_works.haml
@@ -17,7 +17,7 @@
     %p Help us understand what makers her ‘tick’ by answering a few questions about her personality, passions, and purpose.
 
   .new-quiz__about-step.step-2.right
-    %h4.light We Suggests Gifts She’ll Love
+    %h4.light We Suggest Gifts She’ll Love
     %p Based on your answers, we then match her with gifts from our curated collection of artisanal items, memorable experiences, or practical funds.
 
   .new-quiz__about-step.step-3.left
