--- a/app/views/admin/invitation_requests/index.haml
+++ b/app/views/admin/invitation_requests/index.haml
@@ -20,6 +20,7 @@
             %td= invitation_request.created_at.strftime('%-m/%-d/%Y')
             %td
               = link_to 'Send Invitation', admin_invitation_request_path(invitation_request), class: 'btn btn-default btn-xs', method: :put
+              = link_to 'Send Unmoderated Invitation', admin_invitation_request_path(invitation_request, unmoderated: 1), class: 'btn btn-default btn-xs', method: :put
               = link_to 'Delete', admin_invitation_request_path(invitation_request), :method => :delete, :data => { :confirm => "Are you sure you want to delete this request?" }, class: 'btn btn-danger btn-xs'
 
     = paginate @invitation_requests
